[project]
name = "anicli_api"
version = "0.7.12"
description = "Anime extractors api implementation"
license = "MIT"
readme = "README.MD"
requires-python = ">=3.8"
keywords = [
    "anime",
    "api",
    "ru",
    "russia",
    "asyncio",
    "parser",
    "httpx",
    "dev"
]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed"
]
dependencies = [
    "attrs>=25.1.0",

    "httpx[http2,socks]>=0.28.1",
    "parsel>=1.9.1",

]

[project.urls]
Issues = "https://github.com/vypivshiy/anicli-api/issues"
Source = "https://github.com/vypivshiy/anicli-api"
"Cli app" = "https://github.com/vypivshiy/ani-cli-ru"

[project.optional-dependencies]
dev = [
    "mypy>=1.14.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.9.9",
]
# optional dep libs for extract cookies from browser
browser-cookies = [
    "rookiepy>=0.5.6",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "anicli_api"
]

[tool.hatch.build.targets.sdist]
include = [
    "anicli_api"
]

[tool.mypy]
python_version = 3.8
pretty = true
explicit_package_bases = true  # anicli_api.player issue
ignore_missing_imports = true
exclude = [
    ".env",
    "__pycache__",
    "examples",
    "__template__.py",
    # auto generated files
    "^anicli_api/source/parsers/[a-z]+_parser.py$",
    "^anicli_api/players/parsers/[a-z]+_parser.py$"
]
files=["anicli_api/*"]

[tool.ruff]
target-version = "py38"
line-length = 120
exclude = [
    "examples",
    "venv",
    "__init__.py",
    "__template__.py",  # templates
    "tests",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
browser-cookies = [
    "rookiepy>=0.5.6",
]

