[project]
name = "anicli_api"
version = "0.8.9"
description = "Anime extractors api implementation"
license = "MIT"
readme = "README.MD"
requires-python = ">=3.9"
keywords = [
    "anime",
    "api",
    "ru",
    "russia",
    "asyncio",
    "parser",
    "httpx",
    "dev"
]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed"
]
dependencies = [
    "attrs>=25.3.0",
    "cssselect>=1.2.0",
    "httpx[http2,socks]>=0.28.1",
    "lxml>=5.3.1",
    "typing-extensions>=4.12.2 ; python_full_version < '3.11'",
]

[dependency-groups]
browser-cookies = [
    "rookiepy>=0.5.6",
]
dev = [
    "mypy>=1.14.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.9.9",
]

[project.urls]
Issues = "https://github.com/vypivshiy/anicli-api/issues"
Source = "https://github.com/vypivshiy/anicli-api"
"Cli app" = "https://github.com/vypivshiy/ani-cli-ru"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "anicli_api"
]

[tool.hatch.build.targets.sdist]
include = [
    "anicli_api"
]

[tool.mypy]
python_version = "3.9"
pretty = true
explicit_package_bases = true  # anicli_api.player issue
ignore_missing_imports = true
exclude = [
    ".env",
    "__pycache__",
    "examples",
    # auto generated files
    "^anicli_api/source/parsers/[a-z]+_parser.py$",
    "^anicli_api/players/parsers/[a-z]+_parser.py$",
    "^anicli_api/source/parsers/apis/*$",
    "^anicli_api/players/parsers/apis/*$",
]
files=["anicli_api/*"]

[tool.ruff]
target-version = "py39"
line-length = 120
exclude = [
    "examples",
    "venv",
    "__init__.py",
    "__template__.py",  # templates
    "tests",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"


